syntax = "proto3";

package sdk.options.v1;

option go_package = "github.com/trinsic-id/sdk/go/options";
option java_package = "trinsic.sdk.v1";
option csharp_namespace = "Trinsic.Sdk.Options.V1";

import "services/account/v1/account.proto";

// service options
message ServiceOptions {
    // server configuration
    ServerConfiguration server = 1;
    // account profile to use for authentication
    services.account.v1.AccountProfile profile = 2;
    // ecosystem to use with endpoints that require it
    string ecosystem = 3;
}

message ServerConfiguration {
    // service endpoint
    string endpoint = 1;
    // service port
    int32 port = 2;
    // indicates if tls is used
    bool use_tls = 3;
}
